@@ -44,16 +44,18 @@ RDEPEND="
 "
 #etelemetry and neurdflib
 
-#src_prepare() {
-#	sed -i\
-#		-e "/'pytest>=%s' % PYTEST_MIN_VERSION,/d"\
-#		-e "/'pytest-xdist',$/d"\
-#		nipype/info.py || die
-#	default
-#}
+src_prepare() {
+	sed -i \
+		-e "/def test_no_et(tmp_path):/i@pytest.mark.skip('Known to fail by upstream: https://github.com/nipy/nipype/issues/3196#issuecomment-606003186')" \
+		nipype/tests/test_nipype.py || die
+	sed -i \
+		-e "/def test_fslversion():/i@pytest.mark.skip('Known to fail by upstream: https://github.com/nipy/nipype/issues/3196#issuecomment-605997462')" \
+		nipype/interfaces/fsl/tests/test_base.py || die
+	default
+}
 
 python_test() {
-	pytest -vv\
+	NIPYPE_NO_ET=1 pytest -vv\
 		|| die
 	# Upstream test configuration fails
 		#-c nipype/pytest.ini\
