@@ -1,3 +1,6 @@
+  31 Mar 2020;  <chymera@gentoo.org> nipype-1.4.2.ebuild:
+  sci-libs/nipype: fixed test suite
+
 *nipype-1.4.2 (30 Mar 2020)
 
   30 Mar 2020;  <chymera@gentoo.org> +nipype-1.4.2.ebuild:
